Kubernetes/3AppDistribuida/deploymentTodoAppIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  labels:
    app: todo-ingress
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-front-svc
            port:
              number: 80
  ingressClassName: nginx
